tests/fixtures/errors/invalid_op.s
.name "invalid"
.comment "op"

foo:
   junk %:foo
